# icp

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: ipc.h  pm.h  process.h  semaphore.h  shm.h
include/utils/: kassert.h  kpanic.h  kprint.h  null.h
src/: ipc.c  kmain.c  pm.c  process.c  semaphore.c  shm.c
